--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <button id="lineTool">Straight Line</button>
       <button id="clockwiseTool">Clockwise Curve</button>
       <button id="anticlockwiseTool">Anticlockwise Curve</button>
+    </div>
+    <div id="extra">
       <button id="clearButton">Clear</button>
+      <button id="exportButton">Export</button>
     </div>
     <script src="script.js"></script>
   </body>
