--- a/index.html
+++ b/index.html
@@ -27,6 +27,28 @@
         <input type="checkbox" id="autoSnapCheckbox" checked />
       </div>
     </div>
+
+    <!-- Hidden popup container -->
+    <div id="popupContainer" class="popup-container">
+      <div class="popup-content">
+        <span class="close-button" id="closeButton">&times;</span>
+        <h2>Export in GCode</h2>
+        <p>
+          Transaction Code: <b><span id="transactionCode">ABC123</span></b>
+        </p>
+        <p>
+          Price: <b>₹<span id="price">50</span></b>
+        </p>
+
+        <img src="qr.png" id="qrCode" class="qr-code" />
+        <p>
+          Make the payment and send the payment screenshot
+          <b>along with the Transaction Code</b> to <b>+919599400138</b> on
+          whatsapp and you'll receive your gcode within 3 hours.
+        </p>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
