Add open graph tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="CNC Canvas" />
+    <meta
+      property="og:description"
+      content="Create and convert drawings to GCode for CNC machines."
+    />
+    <meta property="og:url" content="https://cncanvas.vercel.app" />
+    <meta content="#9affe1" name="theme-color" />
+
     <link rel="stylesheet" href="styles.css" />
     <title>CNC Sketch App</title>
   </head>
