--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <div>X, Y: <span id="coordinates">(0, 0)</span></div>
       <div>Radius: <span id="radius">0</span></div>
     </div>
+    <div class="tipBox">
+      Tip:
+      <span id="tip">You can adjust the radius by using the scroll wheel</span>
+    </div>
     <canvas id="canvas" width="100" height="100"></canvas>
     <div id="tools">
       <button id="lineTool">Straight Line</button>
@@ -58,6 +62,15 @@
           contributions enable more projects like this. Thank you!
         </p>
         <button id="viewGCodeButton">View GCode</button>
+      </div>
+    </div>
+
+    <div id="mobileNote" style="display: none" class="modal-overlay">
+      <div id="mobileNoteContent" class="modal-content">
+        <p>
+          Mobile isn't supported for now. Please open this website on a desktop
+          with a mouse.
+        </p>
       </div>
     </div>
 
