--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <h2 id="appTitle">CNCanvas v1.3</h2>
+    <h3 id="subTitle">Made with ❤️ by Swastik Goswami</h3>
     <div id="infoBox">
       <div>X, Y: <span id="coordinates">(0, 0)</span></div>
       <div>Radius: <span id="radius">0</span></div>
